k8s/whispr/preprod/user-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: whispr-preprod
  labels:
    app: user-service
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: ghcr.io/whispr-messenger/user-service/user-service:sha-04a01ce
          ports:
            - name: http
              containerPort: 3011
            - name: grpc
              containerPort: 50011
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 384Mi
              cpu: 500m
