k8s/whispr/preprod/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: whispr-preprod
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - name: http
      port: 3011
      targetPort: 3011
      nodePort: 30111
    - name: grpc
      port: 50011
      targetPort: 50011
